--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
           <h3>Nos envie uma Mensagem!</h3>
           <p>Seja para orçamentos, dúvidas ou qualquer outra necessidade, nosso time está pronto para ajudar você!</p>
 
-          <form action="forms/contact.php" method="post" class="php-email-form">
+          <form action="https://formspree.io/f/xregjdvo" method="POST" class="php-email-form">
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="nameInput" name="name" placeholder="Full Name" required="">
               <label for="nameInput">Nome Completo</label>
