--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/logo.png" alt="Logo Lander Up" width="40" height="40">
+        <img src="assets/img/logo.png" alt="Logo Lander Up" width="55" height="40">
         <h1 class="sitename">Lander Up</h1>
       </a>
 
@@ -61,10 +61,10 @@
   <main class="main">
 
     <section id="hero" class="hero section">
-     <div class="hero-background">
-  <img src="assets/img/bg/abstract-bg-3.png" alt="Fundo Abstrato" class="hero-bg-img">
-  
+    <div class="hero-background">
+  <img src="assets/img/bg/abstract-bg-3.webp" alt="Fundo Abstrato" class="hero-bg-img">
   <div class="hero-overlay"></div>
+</div>
 </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
