--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Home - LanderUp</title>
-  <meta name="description" content="LanderUp - Criação de sites profissionais, landing pages e e-commerce em Juiz de Fora. Tenha seu site rápido, moderno e otimizado.">
-  <meta name="keywords" content="criação de sites, web design, landing page, e-commerce, juiz de fora, desenvolvimento web">
+  <meta name="description"
+    content="LanderUp - Criação de sites profissionais, landing pages e e-commerce em Juiz de Fora. Tenha seu site rápido, moderno e otimizado.">
+  <meta name="keywords"
+    content="criação de sites, web design, landing page, e-commerce, juiz de fora, desenvolvimento web">
 
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -25,7 +27,7 @@
 
   <link href="assets/css/main.css" rel="stylesheet">
 
-  </head>
+</head>
 
 <body class="index-page">
 
@@ -61,11 +63,10 @@
   <main class="main">
 
     <section id="hero" class="hero section">
-    <div class="hero-background">
-  <img src="assets/img/bg/abstract-bg-3.webp" alt="Fundo Abstrato" class="hero-bg-img">
-  <div class="hero-overlay"></div>
-</div>
-</div>
+      <div class="hero-background">
+        <img src="assets/img/bg/abstract-bg-3.webp" alt="Fundo Abstrato" class="hero-bg-img">
+        <div class="hero-overlay"></div>
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center text-center">
@@ -75,7 +76,8 @@
               <p>Sites modernos, rápidos e personalizados — perfeitos para o seu negócio começar a crescer online.</p>
 
               <div class="hero-btns" data-aos="fade-up" data-aos-delay="300">
-                <a href="https://wa.me/5532999065696?text=Olá,%20vim%20pelo%20site%20e%20gostaria%20de%20fazer%20um%20orçamento!" class="btn btn-primary" target="_blank">Fazer um Orçamento</a>
+                <a href="https://wa.me/5532999065696?text=Olá,%20vim%20pelo%20site%20e%20gostaria%20de%20fazer%20um%20orçamento!"
+                  class="btn btn-primary" target="_blank">Fazer um Orçamento</a>
                 <a href="#portfolio" class="btn btn-outline glightbox">
                   <i class="bi bi-play-circle"></i>
                   Conheça Nosso Portfólio
@@ -89,7 +91,8 @@
           <div class="col-lg-8">
             <div class="hero-image-container" data-aos="zoom-in" data-aos-delay="400">
               <div class="hero-image">
-                <img src="assets/img/about/about-15.webp" alt="Inovação nos Negócios" class="img-fluid" width="1000" height="600">
+                <img src="assets/img/about/about-15.webp" alt="Inovação nos Negócios" class="img-fluid" width="1000"
+                  height="600">
                 <div class="image-decoration"></div>
               </div>
             </div>
@@ -103,8 +106,8 @@
                 <div class="stat-icon">
                   <i class="bi bi-trophy"></i>
                 </div>
-                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1"
-                    class="purecounter"></span>+</div>
+                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="100"
+                    data-purecounter-duration="1" class="purecounter"></span>+</div>
                 <p>O melhor custo-benefício.</p>
               </div>
 
@@ -112,8 +115,8 @@
                 <div class="stat-icon">
                   <i class="bi bi-people"></i>
                 </div>
-                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="850" data-purecounter-duration="1"
-                    class="purecounter"></span>+</div>
+                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="850"
+                    data-purecounter-duration="1" class="purecounter"></span>+</div>
                 <p>Mais visibilidade para sua Marca.</p>
               </div>
 
@@ -121,8 +124,8 @@
                 <div class="stat-icon">
                   <i class="bi bi-lightning"></i>
                 </div>
-                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="95" data-purecounter-duration="1"
-                    class="purecounter"></span>%</div>
+                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="95"
+                    data-purecounter-duration="1" class="purecounter"></span>%</div>
                 <p>Desenvolvemos e validamos com você.</p>
               </div>
 
@@ -130,8 +133,8 @@
                 <div class="stat-icon">
                   <i class="bi bi-globe"></i>
                 </div>
-                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1"
-                    class="purecounter"></span>+</div>
+                <div class="stat-number"><span data-purecounter-start="0" data-purecounter-end="12"
+                    data-purecounter-duration="1" class="purecounter"></span>+</div>
                 <p>Personalização e suporte.</p>
               </div>
             </div>
@@ -234,7 +237,8 @@
         <span class="description-title">Portfolio</span>
         <h2>Portfolio</h2>
         <p>Conheça alguns dos nossos Projetos</p>
-      </div><div class="container" data-aos="fade-up" data-aos-delay="100">
+      </div>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="isotope-layout" data-default-filter="*" data-layout="fitRows" data-sort="original-order">
 
@@ -249,10 +253,12 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-card">
                 <div class="image-container">
-                  <img src="assets/img/portfolio/colucci.png" class="img-fluid" alt="Brand Identity" loading="lazy" width="800" height="600">
+                  <img src="assets/img/portfolio/colucci.png" class="img-fluid" alt="Brand Identity" loading="lazy"
+                    width="800" height="600">
                   <div class="overlay">
                     <div class="overlay-content">
-                      <a href="https://coluccijr.com.br/" class="details-link" title="Ver Detalhes do Projeto" aria-label="Ver Projeto Colucci Junior">
+                      <a href="https://coluccijr.com.br/" class="details-link" title="Ver Detalhes do Projeto"
+                        aria-label="Ver Projeto Colucci Junior">
                         <i class="bi bi-arrow-right"></i>
                       </a>
                     </div>
@@ -263,13 +269,16 @@
                   <p>Lading Page para a empresa Junior Colucci</p>
                 </div>
               </div>
-            </div><div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
               <div class="portfolio-card">
                 <div class="image-container">
-                  <img src="assets/img/portfolio/seFair.png" class="img-fluid" alt="E-commerce Platform" loading="lazy" width="800" height="600">
+                  <img src="assets/img/portfolio/seFair.png" class="img-fluid" alt="E-commerce Platform" loading="lazy"
+                    width="800" height="600">
                   <div class="overlay">
                     <div class="overlay-content">
-                      <a href="https://snadv.com.br/novo/landing/" class="details-link" title="Ver Detalhes do Projeto" aria-label="Ver Projeto seFair">
+                      <a href="https://snadv.com.br/novo/landing/" class="details-link" title="Ver Detalhes do Projeto"
+                        aria-label="Ver Projeto seFair">
                         <i class="bi bi-arrow-right"></i>
                       </a>
                     </div>
@@ -280,11 +289,14 @@
                   <p>Landing Page para o escritório de advocacia seFair</p>
                 </div>
               </div>
-            </div></div></div>
+            </div>
+          </div>
+        </div>
 
       </div>
 
-    </section><section id="team" class="team section">
+    </section>
+    <section id="team" class="team section">
 
       <div class="container section-title" data-aos="fade-up">
         <span class="description-title">Nossa Equipe</span>
@@ -299,27 +311,33 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-image">
-                <img src="assets/img/person/person-mauryan.webp" class="img-fluid" alt="Mauryan Ramos" loading="lazy" width="600" height="600">
+                <img src="assets/img/person/person-mauryan.webp" class="img-fluid" alt="Mauryan Ramos" loading="lazy"
+                  width="600" height="600">
                 <div class="social-overlay">
                   <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/mauryan-ramos-138372231/" aria-label="Linkedin Mauryan"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/mauryan-ramos-138372231/" aria-label="Linkedin Mauryan"><i
+                        class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
               <div class="member-info">
                 <h3>Mauryan Ramos</h3>
                 <span>Programador</span>
-                <p>Quatro anos de experiência com programação, Técnico em Desenvolvimento de sistemas, graduando em Defesa Cibernética e Inteligência Artificial.</p>
+                <p>Quatro anos de experiência com programação, Técnico em Desenvolvimento de sistemas, graduando em
+                  Defesa Cibernética e Inteligência Artificial.</p>
               </div>
-            </div></div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-image">
-                <img src="assets/img/person/person-vinicius.webp" class="img-fluid" alt="Vinicius Sousa" loading="lazy" width="600" height="600">
+                <img src="assets/img/person/person-vinicius.webp" class="img-fluid" alt="Vinicius Sousa" loading="lazy"
+                  width="600" height="600">
                 <div class="social-overlay">
                   <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/vinicius-sousa-dev/" aria-label="Linkedin Vinicius"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/vinicius-sousa-dev/" aria-label="Linkedin Vinicius"><i
+                        class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -328,15 +346,18 @@
                 <span>Programador</span>
                 <p>Três anos de experiência com programação, Bacharel em Sistemas de Informação</p>
               </div>
-            </div></div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-image">
-                <img src="assets/img/person/person-leonardo.webp" class="img-fluid" alt="Leonardo Henrique" loading="lazy" width="600" height="600">
+                <img src="assets/img/person/person-leonardo.webp" class="img-fluid" alt="Leonardo Henrique"
+                  loading="lazy" width="600" height="600">
                 <div class="social-overlay">
                   <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/leonardo-perreira-930260332" aria-label="Linkedin Leonardo"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/leonardo-perreira-930260332" aria-label="Linkedin Leonardo"><i
+                        class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -345,15 +366,18 @@
                 <span>Programador</span>
                 <p>Técnico em Desenvolvimento de sistemas.</p>
               </div>
-            </div></div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-image">
-                <img src="assets/img/person/person-joao.webp" class="img-fluid" alt="João Victor" loading="lazy" width="600" height="600">
+                <img src="assets/img/person/person-joao.webp" class="img-fluid" alt="João Victor" loading="lazy"
+                  width="600" height="600">
                 <div class="social-overlay">
                   <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/joao-oliveira-dev2000/" aria-label="Linkedin João"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/joao-oliveira-dev2000/" aria-label="Linkedin João"><i
+                        class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -363,12 +387,14 @@
                 <p>Infraestrutura de TI e Desenvolvimento de Software</p>
                 <p>Sistemas de Informação</p>
               </div>
-            </div></div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-image">
-                <img src="assets/img/person/person-gabriel.webp" class="img-fluid" alt="Gabriel Gouveia" loading="lazy" width="600" height="600">
+                <img src="assets/img/person/person-gabriel.webp" class="img-fluid" alt="Gabriel Gouveia" loading="lazy"
+                  width="600" height="600">
                 <div class="social-overlay">
                   <div class="social-icons">
                     <a href="https://github.com/G0UV314" aria-label="Github Gabriel"><i class="bi bi-linkedin"></i></a>
@@ -378,26 +404,32 @@
               <div class="member-info">
                 <h3>Gabriel Gouveia</h3>
                 <span>Designer Gráfico</span>
-                <p>Cinco anos com experiência em Design gráfico, domínio de ferramentas como Adobe para manipulação de imagens. Cursando sistemas de informação.</p>
+                <p>Cinco anos com experiência em Design gráfico, domínio de ferramentas como Adobe para manipulação de
+                  imagens. Cursando sistemas de informação.</p>
               </div>
-            </div></div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-image">
-                <img src="assets/img/person/person-pedro.webp" class="img-fluid" alt="Pedro Spíndola" loading="lazy" width="600" height="600">
+                <img src="assets/img/person/person-pedro.webp" class="img-fluid" alt="Pedro Spíndola" loading="lazy"
+                  width="600" height="600">
                 <div class="social-overlay">
                   <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/pedrospindola/" aria-label="Linkedin Pedro"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/pedrospindola/" aria-label="Linkedin Pedro"><i
+                        class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
               <div class="member-info">
                 <h3>Pedro Spíndola</h3>
                 <span>Programador</span>
-                <p>Possuo experiência prática em desenvolvimento Web e Mobile, atuando tanto em projetos acadêmicos desafiadores quanto no mercado de trabalho.</p>
+                <p>Possuo experiência prática em desenvolvimento Web e Mobile, atuando tanto em projetos acadêmicos
+                  desafiadores quanto no mercado de trabalho.</p>
               </div>
-            </div></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -415,7 +447,7 @@
               <i class="bi bi-telephone-fill"></i>
             </div>
             <div class="card-content">
-              <h4>Telefone</h4>
+              <h2>Telefone</h2>
               <p>+55 (32) 99906-5696  ← Mauryan</p>
             </div>
           </div>
